eagle_test/error/this_error.eagle
var b = this.c;
// expected: [Error at line 1] At 'super': Can't use 'super' keyword outside class